About me section added

--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
               <h3>About Me</h3>
             </div> 
             <div class="about-sections d-flex flex-column py-2">
-              <div class="about-paragraph">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum architecto corrupti sint quis rerum. Doloribus tenetur voluptatum quibusdam ut exercitationem voluptate laboriosam quia earum minima hic eius, magnam iure illum?</p>
+              <div class="about-paragraph text-justify">
+                <p>Hi! My name is Sarah-May, I am a self-taught developer based in London. </p>
+                <p>My most vivid experience on how Web Development can influence and facilitate users was during my previous employment as a nurse. I realised during a clinic how it was difficult for elderly to access information on their medical condition or about their local hospital.</p>
+                <p>After hearing numerous testimonies on how patients were left for several months anxious without resources or anyone to contact, it became clear that my creativity could be of use. With the help of specialists, we created a leaflet, which in turn became my very first web project.</p>
+                <p>That is how I took my first-step into front-end development!</p>
+                <p>Through this experience I was able to use skills that I value, such as problem-solving, teamwork and attention to detail. Since, I’ve dedicated my time to learn new skills through my personal web projects. 
+                Although I am still getting the grip of JavaScript, I believe learning never stops and my goal is to develop more projects in the near future with jQuery, React, MySQL and Node.js.</p>
+                <p>If you would like us to work together, don’t hesitate to <a href="#contact" class="about-contact">contact me</a> !</p>
+                
               </div>
               <div class="about-download text-center">
                 <a href="CV-2020.docx" type="button" class="btn btn-custom" download><i class="fa fa-download"></i> Download CV</a>
@@ -123,36 +130,36 @@
 
           <div class="col-12 col-md-6 col-lg-4 mb-3">
             <div class="card">
-              <img class="project-img card-img-top" src="img/Hollywood1.jpg" alt="">
+              <img class="project-img card-img-top" src="img/under-construction.svg" alt="">
               <div class="card-body">
                 <h5 class="card-title">Project</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis iste laudantium libero perspiciatis recusandae vitae doloribus placeat tempore ex repellat, quisquam illo nihil corrupti itaque quod natus voluptas atque rem!</p>
-                <a href="#" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt"></i> Project Link</a>
-                <a href="#" target="_blank" class="btn btn-outline-light btn-sm"><i class="fab fa-github"></i> Github</a>
+                <p class="card-text"> *** COMING SOON ***</p>
+                <!-- <a href="#" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt"></i> Project Link</a>
+                <a href="#" target="_blank" class="btn btn-outline-light btn-sm"><i class="fab fa-github"></i> Github</a> -->
               </div>
             </div>
           </div>
 
           <div class="col-12 col-md-6 col-lg-4 mb-3">
             <div class="card">
-              <img class="project-img card-img-top" src="img/Louvre1.jpg" alt="">
+              <img class="project-img card-img-top" src="img/under-construction.svg" alt="">
               <div class="card-body">
                 <h5 class="card-title">Project</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis iste laudantium libero perspiciatis recusandae vitae doloribus placeat tempore ex repellat, quisquam illo nihil corrupti itaque quod natus voluptas atque rem!</p>
-                <a href="#" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt"></i> Project Link</a>
-                <a href="#" target="_blank" class="btn btn-outline-light btn-sm"><i class="fab fa-github"></i> Github</a>
+                <p class="card-text"> *** COMING SOON ***</p>
+                <!-- <a href="#" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt"></i> Project Link</a>
+                <a href="#" target="_blank" class="btn btn-outline-light btn-sm"><i class="fab fa-github"></i> Github</a> -->
               </div>
             </div>
           </div>
 
           <div class="col-12 col-md-6 col-lg-4 mb-3">
             <div class="card">
-              <img class="project-img card-img-top" src="img/singapore1.jpeg" alt="">
+              <img class="project-img card-img-top" src="img/under-construction.svg" alt="">
               <div class="card-body">
                 <h5 class="card-title">Project</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis iste laudantium libero perspiciatis recusandae vitae doloribus placeat tempore ex repellat, quisquam illo nihil corrupti itaque quod natus voluptas atque rem!</p>
-                <a href="#" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt" ></i> Project Link</a>
-                <a href="#" target="_blank" class="btn btn-outline-light btn-sm" ><i class="fab fa-github"></i> Github</a>
+                <p class="card-text"> *** COMING SOON ***</p>
+                <!-- <a href="#" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt"></i> Project Link</a>
+                <a href="#" target="_blank" class="btn btn-outline-light btn-sm"><i class="fab fa-github"></i> Github</a> -->
               </div>
             </div>
           </div>
@@ -239,7 +246,7 @@
               <a href="mailto:sarahmay.archibald@gmail.com" class="m-2" target="_blank"><i class="fas fa-envelope fa-3x"></i></a>
             </div>
             <!-- Contact Form -->
-            <div class="contact-form text-center">
+            <!-- <div class="contact-form text-center">
               <form>                
                 <div class="form-group">
                   <div class="row">
@@ -262,7 +269,7 @@
 
                 <a href="" type="submit" class="btn btn-custom">Submit</a>
               </form>
-            </div>
+            </div> -->
           </div>
 
         </div>
