adding new project card and links

--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
             <div class="about-sections d-flex flex-column py-2">
               <div class="about-paragraph text-justify">
                 <p>Hi! My name is Sarah-May, I am a self-taught developer based in London. </p>
-                <p>My most vivid experience on how Web Development can influence and facilitate users was during my previous employment as a nurse. I realised during a clinic how it was difficult for elderly to access information on their medical condition or about their local hospital.</p>
-                <p>After hearing numerous testimonies on how patients were left for several months anxious without resources or anyone to contact, it became clear that my creativity could be of use. With the help of specialists, we created a leaflet, which in turn became my very first web project.</p>
-                <p>That is how I took my first-step into front-end development!</p>
-                <p>Through this experience I was able to use skills that I value, such as problem-solving, teamwork and attention to detail. Since, I’ve dedicated my time to learn new skills through my personal web projects. 
+                <p>My most vivid experience on how Web Development can influence and facilitate users was during my previous employment as a nurse. After hearing numerous testimonies on how patients were unable to easily find resources or a specialist to contact, my team and I created a leaflet, which in turn became my very first web project.</p>
+                <p>Through this experience I was able to use skills that I value, such as problem-solving, teamwork and attention to detail.
                 Although I am still getting the grip of JavaScript, I believe learning never stops and my goal is to develop more projects in the near future with jQuery, React, MySQL and Node.js.</p>
                 <p>If you would like us to work together, don’t hesitate to <a href="#contact" class="about-contact">contact me</a> !</p>
                 
@@ -118,12 +116,12 @@
 
           <div class="col-12 col-md-6 col-lg-4 mb-3">
             <div class="card">
-              <img class="project-img card-img-top" src="img/project-signUpForm.png" alt="">
+              <img class="project-img card-img-top" src="img/project-LANoire.png" alt="">
               <div class="card-body">
-                <h5 class="card-title">Sign Up Form</h5>
-                <p class="card-text">A simple sign up form to practice the use of <span>Flexbox</span>.</p>
-                <a href="/projects/signUpForm/index.html" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt" ></i> Project Link</a>
-                <a href="https://github.com/sarahmayarchibald/signUp-form2" target="_blank" class="btn btn-outline-light btn-sm" ><i class="fab fa-github"></i> Github</a>
+                <h5 class="card-title">L.A. Noire</h5>
+                <p class="card-text">A simple stand alone page about the famous video game, in French.</p>
+                <a href="/projects/LA-Noire/index.html" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt" ></i> Project Link</a>
+                <a href="https://github.com/sarahmayarchibald/LA-Noire-French" target="_blank" class="btn btn-outline-light btn-sm" ><i class="fab fa-github"></i> Github</a>
               </div>
             </div>
           </div>
@@ -134,8 +132,6 @@
               <div class="card-body">
                 <h5 class="card-title">Project</h5>
                 <p class="card-text"> *** COMING SOON ***</p>
-                <!-- <a href="#" target="_blank" class="btn btn-outline-warning btn-sm my-1"><i class="fas fa-external-link-alt"></i> Project Link</a>
-                <a href="#" target="_blank" class="btn btn-outline-light btn-sm"><i class="fab fa-github"></i> Github</a> -->
               </div>
             </div>
           </div>
@@ -199,7 +195,7 @@
                 <img class="skill-logo img-fluid" src="img/logo-javascript.svg" alt="">
               </div>
   
-              <div class="col-3 py-4">
+              <!-- <div class="col-3 py-4">
                 <img class="skill-logo img-fluid" src="img/logo-jquery.svg" alt="">
               </div>
   
@@ -218,7 +214,7 @@
               <div class="col-3 py-4">
                 <img class="skill-logo img-fluid" src="img/logo-wordpress.svg" alt="">
               </div>
-  
+   -->
               <div class="col-3 py-4">
                 <img class="skill-logo img-fluid" src="img/logo-git.svg" alt="">
               </div>
